Token redis üzerinden kontrol ediliyor
